--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -59,7 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+    window.addEventListener('keydown' , function (e) {
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+      if (!audio) return; // Stops function from running
+      audio.currentTime = 0; // Sets audio time in seconds
+      audio.play()
+      key.classList.add('playing')
+      console.log(key)
+      // console.log(audio)
+    })
 
+    function removeTransition(e) {
+      if (e.propertyName !== 'transform') return; // Skip if not a transform
+      this.classList.remove('playing');
+    }
+
+    const keys = document.querySelectorAll('.key')
+    keys.forEach(key =>
+      key.addEventListener('transitionend', removeTransition));
 </script>
 
 
