--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -23,6 +23,22 @@
 
   <style>
 
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -46,6 +62,19 @@
   </style>
 
   <script>
+      const inputs = document.querySelectorAll('input');
+
+      function handleInput() {
+        const suffix = this.dataset.sizing || '';
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+
+      }
+
+      inputs.forEach((input) => {
+        input.addEventListener('change', handleInput)
+        input.addEventListener('mousemove', handleInput)
+      })
+
   </script>
 
 </body>
