Array Cardio Day WIP

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -16,9 +16,9 @@
     const inventors = [
       { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
       { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
-      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
+      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 }, // 1500
       { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
-      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
+      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 }, //1500
       { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
       { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
       { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
@@ -38,18 +38,49 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    function year1500(item) {
+       item.filter((person) => {
+          if (person.year > 1500 && person.year < 1600) {
+            console.log(person.first, person.last, person.year);
+          }
+       })
+    }
+
+    // year1500(inventors)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+      inventors.map((inventor) => {
+        // console.log(inventor.first, inventor.last)
+      })
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const currentYear = new Date().getFullYear();
+      inventors.forEach(inventor => {
+        inventor.age = currentYear - inventor.year;
+      });
 
+      // Sort the inventors array by age from oldest to youngest
+      inventors.sort((a, b) => b.age - a.age);
+
+      console.log(inventors);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+      const totalYears = inventors.reduce((total, inventor) => {
+        return total + (inventor.passed - inventor.year);
+      }, 0);
 
+      console.log(totalYears);
     // 5. Sort the inventors by years lived
 
+    const oldest = inventors.sort(function(a, b) {
+      const lastInventor = a.passed - a.year;
+      const nextInventor = b.passed - b.year;
+      return lastInventor > nextInventor ? -1 : 1;
+    });
+    console.table(oldest);
+    
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
