--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Type Ahead 👀</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
 <body>
@@ -15,8 +15,47 @@
       <li>or a state</li>
     </ul>
   </form>
+
+
+
 <script>
+
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+const citiesArray = [];
+const searchInput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+async function getData(url, cities ) {
+  let data = await fetch(url);
+  let json = await data.json()
+  console.log(json)
+  cities.push(...json)
+}
+
+getData(endpoint, citiesArray)
+
+function findMatches(wordToMatch, cities) {
+  return cities.filter(place => {
+    const regex = new RegExp(wordToMatch, 'gi');
+    return place.city.match(regex) || place.state.match(regex)
+  })
+}
+
+function displayMatches() {
+  const matchArray = findMatches(this.value, citiesArray)
+  console.log(matchArray)
+  const html = matchArray.map((place) => {
+    return `<li>
+              <span class="name">${place.city}, ${place.state}</span>
+              <span class="population">${place.population}</span>
+            </li>`
+  }).join()
+  suggestions.innerHTML = html;
+}
+
+
+searchInput.addEventListener('change', displayMatches)
+searchInput.addEventListener('keyup', displayMatches)
 
 </script>
 </body>
